@@ -1,0 +1,13 @@
+
+
+Developers
+-----------
+Ian Larsen 	<drblast (at) users.sourceforge.net>
+Tony007  	<supertony007 (at) googlemail.com> 
+Ferry Hendrikx 	<ferry.hendrikx (at) gmail.com> 
+
+
+Translators
+-----------
+(German) Immo-Gert Birn
+
